# stt-server

./: .env  .gitignore  Dockerfile  client.py  main.py  mise.toml  modalserver.py  output.srt  pyproject.toml  server.py
