[project]
name = "stt-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "modal>=1.2.0",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
    "whisper-live>=0.7.1",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
